--- a/Classification_assignment.ipynb
+++ b/Classification_assignment.ipynb
@@ -1467,7 +1467,7 @@
    "id": "73226f76",
    "metadata": {},
    "source": [
-    "From the above report we can see that Random forest on whole dataset performs the best. So we are going to use it for prediction."
+    "I have tried to use mutual information for variable reduction, but it did not improve any accuracy.From the above report we can see that Random forest on whole dataset performs the best. So we are going to use it for prediction."
    ]
   },
   {
@@ -1917,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95d1433b",
+   "id": "27838f57",
    "metadata": {},
    "outputs": [],
    "source": []
